<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbl_availability_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_availability_type" />

        <Spinner
            android:id="@+id/spinner_availability_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/layout_places_in_car"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/lbl_places_in_car"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_places_in_car" />

        <EditText
            android:id="@+id/txt_places_in_car"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/lbl_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_address" />

        <TextView
            android:id="@+id/txt_starting_location_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_change"
            android:id="@+id/btn_change_address"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_save"
            android:id="@+id/btn_save" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_delete"
            android:id="@+id/btn_delete" />
    </LinearLayout>



</LinearLayout>