<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/lbl_ride_intention" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/radio_group_give_receive_ride">

            <RadioButton android:id="@+id/radio_give_ride"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_give_ride"/>

            <RadioButton android:id="@+id/radio_receive_ride"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_receive_ride"/>

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_places_in_car"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/lbl_places_in_car" />

        <EditText
            android:id="@+id/text_places_in_car"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:ems="10"
            android:inputType="number"/>

    </LinearLayout>

</LinearLayout>