<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.unisc.caronasuniscegm.AgendaActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/config_ride"
        android:id="@+id/add_ride"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/add_ride">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_title_agenda_list"
            android:id="@+id/text_title_agenda_list" />

        <ListView
            android:id="@+id/list_view_ride_intention"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            />

        <TextView
            android:id="@+id/rideIntentionEmptyElement"
            android:drawablePadding="15dp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/txt_no_ride_intentions"
            />
    </LinearLayout>


</RelativeLayout>